# canvas-to-notebooklm

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  canvas_client.py  docker-compose.yml  inspect_notebook_classes.py  inspect_notebooklm.py  main.py  notebook_client.py  pyproject.toml  requirements.txt  state_manager.py
.github/workflows/: ci.yml
canvas_to_notebooklm/: __init__.py  cli.py
docs/: Initial_Instructions.md  Technical_Design_Doc.md  User_Guide.md
tests/: test_cli_args.py  test_state_manager.py
