[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "canvas-to-notebooklm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "canvasapi>=3.4.0",
    "notebooklm-py>=0.3.2",
    "playwright>=1.58.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[project.scripts]
canvas-to-notebooklm = "canvas_to_notebooklm.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.13.2",
    "types-requests>=2.32.4.20250913",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.uv]
package = true

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_configs = true
exclude = ["^\\.venv/", "^temp_downloads/"]
